# rust-100

./: .gitignore  404.html  COMPLETION_SUMMARY.html  COMPLETION_SUMMARY.md  IMPROVEMENT_PLAN.md  KNOWLEDGE_MAP.md  PROJECT_COMPLETION_STATUS.html  PROJECT_COMPLETION_STATUS.md  QUICK_START.html  QUICK_START.md  README.md  RUST_100_DAYS_COMPLETE.html  RUST_100_DAYS_COMPLETE.md  SUMMARY.md  book.toml  index.html  package-lock.json  print.html  searcher-c2a407aa.js  searchindex-0b6c097e.js  searchindex-0d721ba8.js  searchindex-17c1766b.js  searchindex-1a69fd7d.js  searchindex-1a72cc2b.js  searchindex-241d8fdc.js  searchindex-24867e00.js  searchindex-30b45ce4.js  searchindex-32e194be.js  searchindex-3374bbbf.js  searchindex-361327c2.js  searchindex-3d9e69d9.js  searchindex-451bf5d8.js  searchindex-47b37952.js  searchindex-4c4eb806.js  searchindex-4dd97b08.js  searchindex-4f5511ec.js  searchindex-507a4bb0.js  searchindex-5565e9c3.js  searchindex-5ed1fdf0.js  searchindex-6a6a6780.js  (+43 more)
.github/workflows/: ci.yml  coverage.yml  deploy.yml  release.yml  validate-mermaid.yml
.patches/: 0001-fix-mermaid-compatibility-fixes-add-validation-scrip.patch
Day01-15/: README.md  index.html
Day01-15/01.Introduction/: README.md  index.html
Day01-15/02.VariablesAndTypes/: README.md  index.html
Day01-15/03.FunctionsAndControlFlow/: README.md  index.html
Day01-15/04.Ownership/: README.md  index.html
Day01-15/05.ReferencesAndBorrowing/: README.md  index.html
Day01-15/06.Slices/: README.md  index.html
Day01-15/07.Structs/: README.md  index.html
Day01-15/08.Enums/: README.md  index.html
Day01-15/09.Modules/: README.md  index.html
Day01-15/10.CommonCollections/: README.md  index.html
Day01-15/11.ErrorHandling/: README.md  index.html
Day01-15/12.Generics/: README.md  index.html
Day01-15/13.Traits/: README.md  index.html
Day01-15/14.Lifetimes/: README.md  index.html
Day01-15/15.Testing/: README.md  index.html
Day16-30/16.Closures/: README.md  index.html
Day16-30/17.Iterators/: README.md  index.html
Day16-30/18.CargoAndCrates/: README.md  index.html
Day16-30/19.SmartPointers_Box/: README.md  index.html
Day16-30/20.SmartPointers_RcRefCell/: README.md  index.html
Day16-30/21.ReferenceCycles/: README.md  index.html
Day16-30/22.Threads/: README.md  index.html
Day16-30/23.MessagePassing/: README.md  index.html
Day16-30/24.SharedState/: README.md  index.html
Day16-30/25.SendSync/: README.md  index.html
Day16-30/26.OOP_TraitObjects/: Cargo.toml  README.md  index.html
Day16-30/27.Patterns/: README.md  index.html
Day16-30/28.AdvancedTraits/: README.md  index.html
Day16-30/29.AdvancedTypes/: README.md  index.html
Day16-30/30.AdvancedFnAndMacros/: Cargo.toml  README.md  index.html
Day31-45/31.FileIO/: README.md  index.html
Day31-45/32.Serialization_Serde/: Cargo.toml  README.md  (+1 more)
Day46-60/55.Benchmark/: Cargo.toml  README.md  index.html
Day46-60/55.Benchmark/benches/: db_benchmark.rs
Day46-60/55.Benchmark/examples/: hello_world.rs
Day46-60/55.Benchmark/src/: lib.rs
Day46-60/55.Benchmark/src/cmd/: get.rs  into_frame.rs  publish.rs
Day46-60/57.Sentinel/: Cargo.toml  README.md  index.html
Day46-60/57.Sentinel/examples/: hello_world.rs  sentinel_demo.rs
Day46-60/57.Sentinel/src/: client.rs  db.rs  lib.rs  main.rs  sentinel.rs  server.rs
Day46-60/57.Sentinel/src/cmd/: set.rs
Day46-60/57.Sentinel/tests/: concurrency.rs
Day46-60/60.CICD/: .editorconfig  .gitignore  BADGES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  ENHANCEMENTS.md  FINAL_REPORT.md  IMPROVEMENTS_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  Makefile  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SECURITY.md  cliff.toml  docker-compose.yml  index.html  rustfmt.toml
Day46-60/60.CICD/.cargo/: config.toml
Day46-60/60.CICD/.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
Day46-60/60.CICD/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Day46-60/60.CICD/.github/workflows/: audit.yml  benchmark.yml  ci.yml  dependency-review.yml  docker.yml  docs.yml  release.yml  scheduled.yml
Day46-60/60.CICD/benches/: version_benchmark.rs
Day46-60/60.CICD/examples/: cli_demo.rs  version_check.rs
Day46-60/60.CICD/scripts/: check.ps1  check.sh  full-check.ps1  full-check.sh  release.ps1  release.sh  verify.ps1  verify.sh
Day46-60/60.CICD/src/: lib.rs  main.rs
Day46-60/60.CICD/tests/: integration_test.rs
Day61-80/: STAGE5_OVERVIEW.html  STAGE5_OVERVIEW.md
Day61-80/64.Middleware/middleware-demo/: Cargo.toml
Day61-80/64.Middleware/middleware-demo/src/: main.rs
Day61-80/79.BlogTesting/blog-api/: Cargo.toml
Day61-80/79.BlogTesting/blog-api/src/: app_state.rs  main.rs
Day61-80/79.BlogTesting/blog-api/src/api/: auth.rs
Day61-80/79.BlogTesting/blog-api/src/models/: comment.rs  mod.rs  post.rs  tag.rs  user.rs
Day61-80/79.BlogTesting/blog-api/src/utils/: password.rs
Day81-90/: STAGE6_OVERVIEW.html  STAGE6_OVERVIEW.md
Day81-90/90.CompilerOptimization/optimization-demo/: Cargo.toml
Day81-90/90.CompilerOptimization/optimization-demo/src/: main.rs
Day91-100/: ARCHITECTURE.md  STAGE7_OVERVIEW.html  STAGE7_OVERVIEW.md
Day91-100/92.PoC/dtask-poc/: Cargo.toml  build.rs
Day91-100/92.PoC/dtask-poc/proto/: echo.proto
Day91-100/92.PoC/dtask-poc/src/: lib.rs  network.rs  store.rs
Day91-100/94.CoreDevelopment2/dtask/: Cargo.toml
Day91-100/94.CoreDevelopment2/dtask/src/: dispatcher.rs  lib.rs  main.rs  scheduler.rs
Day91-100/97.Documentation/dtask/: Cargo.toml  README.md  index.html
Day91-100/97.Documentation/dtask/proto/: dtask.proto
Day91-100/97.Documentation/dtask/src/: api.rs  auth.rs  dispatcher.rs  lib.rs  model.rs  raft.rs  scheduler.rs
docs/: README.md
extras/: README.md  async-explained.md  common-pitfalls.md  ownership-deep-dive.md  rust-zen.md
scripts/: validate_mermaid.js
templates/: README.md
templates/cli-app/: Cargo.toml  README.md
templates/cli-app/src/: cli.rs  config.rs  error.rs  main.rs
(+534 files in other folders)
