[package]
name = "cli-app-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI application template"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/your-repo"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]

[dependencies]
# 命令行参数解析
clap = { version = "4.5", features = ["derive", "cargo"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
env_logger = "0.11"
log = "0.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 其他实用工具
colored = "2.1"  # 彩色输出
indicatif = "0.17"  # 进度条

[dev-dependencies]
assert_cmd = "2.0"  # 测试 CLI
predicates = "3.1"  # 断言辅助
tempfile = "3.10"  # 临时文件

[[bin]]
name = "cli-app"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
