[package]
name = "optimization-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Adding a dependency to see impact on size more clearly (optional, but good for demo)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- Profiles ---

[profile.release]
# Default release profile
opt-level = 3
debug = false

[profile.min-size]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Reduce parallelism for better optimization
panic = "abort"     # Abort on panic (removes landing pads)
strip = true        # Strip symbols
