[package]
name = "dtask"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
openraft = "0.8.4"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["full"] }
jsonwebtoken = "9.2"
prometheus = "0.13"
lazy_static = "1.4"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3.0"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
